--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -198,7 +198,7 @@ a.article:hover {
   width: 80px;
   height: 80px;
   top: 43%;
-  right: 47%;
+  right: 40%;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
@@ -503,6 +503,20 @@ label[id*="-error"] {
   width: 50%;
 }
 
-#tbl-loans-by-request tbody tr td:nth-child(7){
-  width: 15% !important;
-}
+#tbl-loans-by-request-pending tbody tr td:nth-child(3){ width: 10% !important; }
+#tbl-loans-by-request-pending tbody tr td:nth-child(10){ width: 10% !important; }
+
+#tbl-loans-by-request-approved tbody tr td:nth-child(3){ width: 10% !important; }
+#tbl-loans-by-request-approved tbody tr td:nth-child(10){ width: 10% !important; }
+
+#tbl-loans-by-request-disapproved tbody tr td:nth-child(3){ width: 10% !important; }
+#tbl-loans-by-request-disapproved tbody tr td:nth-child(10){ width: 10% !important; }
+
+#tbl-benefit-by-request-pending tbody tr td:nth-child(3){ width: 10% !important; }
+#tbl-benefit-by-request-pending tbody tr td:nth-child(9){ width: 10% !important; }
+
+#tbl-benefit-by-request-approved tbody tr td:nth-child(3){ width: 10% !important; }
+#tbl-benefit-by-request-approved tbody tr td:nth-child(9){ width: 10% !important; }
+
+#tbl-benefit-by-request-disapproved tbody tr td:nth-child(3){ width: 10% !important; }
+#tbl-benefit-by-request-disapproved tbody tr td:nth-child(9){ width: 10% !important; }
