--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -236,7 +236,7 @@ input[type=text]:placeholder {
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #9b4981;
   content: "";
   transition: width 0.2s;
 }
